# serial-barcode-scanner

./: .gitignore  .travis.yml  LICENSE  Makefile  README  README.md  TODO.md  barcodelist.rb  configure  configure-functions.sh  create_db.sql  db.vala  device.vala  example.cfg  insert-prices.sql  logo.txt  main.vala  meson.build  mqtt.patch  serial.vala  shop.db  ui.vala  user-interface.ui  web.vala
data/: meson.build
data/config/: config.ini  logo.txt
data/dbus/: io.mainframe.shopsystem.AudioPlayer.service.in  io.mainframe.shopsystem.Config.service.in  io.mainframe.shopsystem.Database.service.in  io.mainframe.shopsystem.InputDevice.service.in  io.mainframe.shopsystem.InvoicePDF.service.in  io.mainframe.shopsystem.Mail.service.in  io.mainframe.shopsystem.PGP.service.in  io.mainframe.shopsystem.ScannerSession.service.in  io.mainframe.shopsystem.SerialDevice.service.in  io.mainframe.shopsystem.StockPDF.service.in  meson.build
data/dbus/config/: io.mainframe.shopsystem.AudioPlayer.conf  io.mainframe.shopsystem.Database.conf  io.mainframe.shopsystem.InputDevice.conf  io.mainframe.shopsystem.Mail.conf  io.mainframe.shopsystem.SerialDevice.conf  io.mainframe.shopsystem.StockPDF.conf
data/invoice/: invoice.final.html  invoice.final.txt  invoice.temporary.html  invoice.temporary.txt  pdf-template.txt  treasurer.mail.txt  vat.html
data/po/: POTFILES  de.po  meson.build  shopsystem.pot
data/sounds/user/girlfriend/: LICENSE
data/sounds/user/japanese/: LICENSE
data/sql/: tables.sql  trigger.sql
data/systemd/: meson.build  shopsystem-display-on-off.service.in  shopsystem-input-device.service.in  shopsystem-mail-backup.service.in  shopsystem-mail-daily-invoice.service.in  shopsystem-mail-monthly-invoice.service.in  shopsystem-ui.service.in  shopsystem-web.service.in
data/templates/: base.html  index.html  menu.html  menu_login.html  menu_logout.html
data/templates/aliases/: index.html
data/templates/cashbox/: add.html  index.html
data/templates/css/: base.css
data/templates/errors/: 403.html
data/templates/products/: bestbefore.html  entry.html  index.html  inventory.html  new.html
data/templates/stats/: index.html  profit_per_day.html  profit_per_product.html  profit_per_weekday.html  stock.html
data/templates/suppliers/: index.html
data/templates/users/: entry.html  index.html  invoice.html
data/udev/: meson.build  shopsystem-input-device-rfid.rules  shopsystem-input-device.rules
dbus/: Makefile  io.mainframe.shopsystem.AudioPlayer.service.in  io.mainframe.shopsystem.Config.service.in  io.mainframe.shopsystem.Database.service.in  io.mainframe.shopsystem.I18n.service.in  io.mainframe.shopsystem.InputDevice.service.in  io.mainframe.shopsystem.InvoicePDF.service.in  io.mainframe.shopsystem.Mail.service.in  io.mainframe.shopsystem.Mqtt.service.in  io.mainframe.shopsystem.PGP.service.in  io.mainframe.shopsystem.ScannerSession.service.in  io.mainframe.shopsystem.SerialDevice.service.in  io.mainframe.shopsystem.StockPDF.service.in
debian/: changelog  control  copyright  rules  shopsystem.config  shopsystem.links  shopsystem.postinst  shopsystem.postrm  shopsystem.prerm  shopsystem.sysuser
docker/: Dockerfile  README.md  config.ini  init.sh  setupEnv.sh  tmux-config
generation/: .gitignore  Dockerfile  README.md  barcodelist.rb  createBarcodeList.sh  createPassList.sh  passlist.rb  query.sh
i18n/: i18n.cfg
invoice/: dbhelper.py  generate-invoice.py  import-users.py  invoice.final.html  invoice.final.txt  invoice.temporary.html  invoice.temporary.txt  ktt-template.lco  mailhelper.py  pdf-template.txt  treasurer.mail.txt  umsatzsteuer.txt
libcairobarcode/: .gitignore  Makefile  code39.vala  ean.vala  error.vala  test.vala
locale/: de.po
shop2mqtt/: .gitignore  README.md  sendStock2Mqtt.py  shop2mqtt.conf.example
sql/: tables.sql  trigger.sql  views.sql
src/: Makefile  admin.vala  audio.vala  db.vala  device.vala  graph-data.vala  main.vala  meson.build  price.vapi  scannersession.vala  session.vala  template.vala  web.vala
src/audio/: Makefile  audio-interface.vala  audio.vala  main.vala
src/backup/: Makefile  main.vala
src/cli/: Makefile  cli-interface.vala  cli.vala  main.vala
src/config/: Makefile  config-interface.vala  config.vala  main.vala
src/curses-ui/: .gitignore  Makefile  clock.vala  curses-ui.vala  dialog.vala  logo.txt  logo.vala  main.vala  message_box.vala  message_box_overlay.vala  numbers.vala  status.vala
src/curses-ui/numbers/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  colon.txt
src/database/: Makefile  database.vala  db-interface.vala  main.vala
src/display-on-off/: display-on-off.sh
src/i18n/: Makefile  i18n-interface.vala  i18n.vala  main.vala
src/input-device/: .gitignore  Makefile  input-device-interface.vala  input-device.vala  main.vala
src/invoice/: .gitignore  Makefile  invoice.vala  main.vala  single.vala
src/libcairobarcode/: code39.vala  ean.vala
src/mail/: Makefile  mail.vala  mailer-interface.vala  mailer.vala  main.vala
src/mqtt/: Makefile  main.vala  mqtt-interface.vala  mqtt.vala
src/pdf-invoice/: .gitignore  Makefile  main.vala  pdf-invoice-interface.vala  pdf-invoice.vala  test.vala
src/pdf-stock/: .gitignore  Makefile  main.vala  pdf-stock-interface.vala  pdf-stock.vala  test.vala
src/pgp/: .gitignore  Makefile  main.vala  pgp-interface.vala  pgp.vala
src/report/: Makefile  main.vala  report.vala
src/scanner-session/: .gitignore  CodeType.vala  Makefile  UserSession.vala  main.vala  main.vala.c  scannersession-interface.vala  scannersession.vala
src/scanner-session/states/: ReadyState.vala  UserState.vala
src/serial-device/: .gitignore  Makefile  main.vala  serial-device-interface.vala  serial-device.vala
src/ui/: clock.vala  curses-ui.vala  dialog.vala  logo.vala  message_box.vala  numbers.vala  status.vala
src/web/: Makefile  csv.vala  main.vala  template.vala  web.vala  websession.vala
systemd/: Makefile  shopsystem-display-on-off.service  shopsystem-input-device.rules  shopsystem-input-device.service  shopsystem-report.service  (+9 more)
(+47 files in other folders)
