bindir = join_paths(get_option('prefix'), get_option('libexecdir'), 'shopsystem')
dbusdir = join_paths(get_option('prefix'), get_option('datadir'), 'dbus-1', 'system-services')
dbuscfgdir = join_paths(get_option('sysconfdir'), 'dbus-1', 'system.d')

cfg = configuration_data()
cfg.set('PATH', bindir)

configure_file(input: 'io.mainframe.shopsystem.AudioPlayer.service.in', output: 'io.mainframe.shopsystem.AudioPlayer.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.Config.service.in', output: 'io.mainframe.shopsystem.Config.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.Database.service.in', output: 'io.mainframe.shopsystem.Database.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.InputDevice.service.in', output: 'io.mainframe.shopsystem.InputDevice.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.InvoicePDF.service.in', output: 'io.mainframe.shopsystem.InvoicePDF.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.Mail.service.in', output: 'io.mainframe.shopsystem.Mail.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.PGP.service.in', output: 'io.mainframe.shopsystem.PGP.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.ScannerSession.service.in', output: 'io.mainframe.shopsystem.ScannerSession.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.SerialDevice.service.in', output: 'io.mainframe.shopsystem.SerialDevice.service', configuration: cfg, install_dir: dbusdir)
configure_file(input: 'io.mainframe.shopsystem.StockPDF.service.in', output: 'io.mainframe.shopsystem.StockPDF.service', configuration: cfg, install_dir: dbusdir)

install_data('config/io.mainframe.shopsystem.AudioPlayer.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.Config.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.Database.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.InputDevice.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.InvoicePDF.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.Mail.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.PGP.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.ScannerSession.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.SerialDevice.conf', install_dir: dbuscfgdir)
install_data('config/io.mainframe.shopsystem.StockPDF.conf', install_dir: dbuscfgdir)
